fix: Always wrap in print style

--- a/static/css/print.scss
+++ b/static/css/print.scss
@@ -35,6 +35,10 @@ pre {
 	white-space: pre-wrap;
 }
 
+.u-nowrap {
+	white-space: pre-wrap;
+}
+
 b,
 strong {
 	font-weight: bold;
